--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "~13.3.0",
     "@tinymce/tinymce-angular": "^6.0.2-feature.20220603072304744.sha40e0b3a",
     "@types/lodash": "^4.14.184",
+    "@types/swiper": "^6.0.0",
     "ng-zorro-antd-mobile": "^6.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.1",
     "tinymce": "^6.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
